feat: change to cloudscraper

--- a/Finder.ipynb
+++ b/Finder.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "      <th>top</th>\n",
        "      <td>2020-09-16</td>\n",
        "      <td>202028206K</td>\n",
-       "      <td>ARR SQUARED PTE. LTD.</td>\n",
+       "      <td>ASIA PAAS HOLDINGS PTE. LTD.</td>\n",
        "      <td>PROFESSIONAL, SCIENTIFIC AND TECHNICAL ACTIVITIES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -113,11 +113,17 @@
        "</div>"
       ],
       "text/plain": [
-       "       Entity Registration Date Entity Profile UEN            Entity Name  \\\n",
-       "count                     24245              24245                  24245   \n",
-       "unique                      362              23231                  23899   \n",
-       "top                  2020-09-16         202028206K  ARR SQUARED PTE. LTD.   \n",
-       "freq                        198                  5                      3   \n",
+       "       Entity Registration Date Entity Profile UEN  \\\n",
+       "count                     24245              24245   \n",
+       "unique                      362              23231   \n",
+       "top                  2020-09-16         202028206K   \n",
+       "freq                        198                  5   \n",
+       "\n",
+       "                         Entity Name  \\\n",
+       "count                          24245   \n",
+       "unique                         23899   \n",
+       "top     ASIA PAAS HOLDINGS PTE. LTD.   \n",
+       "freq                               3   \n",
        "\n",
        "                              Primary Section Description  \n",
        "count                                               24245  \n",
@@ -126,7 +132,7 @@
        "freq                                                10638  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +299,7 @@
        "[24245 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +473,7 @@
        "[23231 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +640,7 @@
       "test_special_characters (__main__.TestEntityUrlSlug) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 8 tests in 0.008s\n",
+      "Ran 8 tests in 0.010s\n",
       "\n",
       "OK\n"
      ]
@@ -642,10 +648,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x24d64990850>"
+       "<unittest.main.TestProgram at 0x17d3161a3a0>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,11 +775,15 @@
     "output_file = \"{}-result.csv\".format(input_file)\n",
     "size = len(df) # Size of dataset\n",
     "\n",
-    "start = 16097\n",
+    "start = 79\n",
     "end = start+1 # size\n",
-    "print(\"Beginning job with id={} of size={}\".format(start, size))\n",
     "\n",
     "max_tries = 15\n",
+    "\n",
+    "print(\"Beginning job with id={} of size={}\".format(start, size))\n",
+    "\n",
+    "\n",
+    "scraper = cloudscraper.create_scraper()\n",
     "\n",
     "for i in range(start, end):\n",
     "    entity = df.loc[i] # current row record\n",
@@ -804,13 +814,13 @@
     "            print(url_new)\n",
     "\n",
     "            # Setup User Agent headers, attempt to imitate a \"browser-like\" request to the webpage\n",
-    "            headers = requests.utils.default_headers()\n",
-    "            headers.update({\n",
-    "                \"User-Agent\": get_random_user_agent()\n",
-    "            })\n",
+    "#             headers = requests.utils.default_headers()\n",
+    "#             headers.update({\n",
+    "#                 \"User-Agent\": get_random_user_agent()\n",
+    "#             })\n",
     "            \n",
     "            # Now, we query the target URL using a random proxy\n",
-    "            resp = requests.get(url_new, headers=headers)\n",
+    "            resp = scraper.get(url_new, proxies=proxies)\n",
     "            \n",
     "            # Use BeautifulSoup to parse the HTML\n",
     "            soup = bs4.BeautifulSoup(resp.text, \"html.parser\")\n",
